# detection-rule-backtester

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: crosspost-devto.md  linkedin-post.md  writeup.md
examples/: demo_backtest.py  run_real_dataset.py  run_real_garak.py
examples/data/: garak_sample.jsonl  sysmon_sample.jsonl
examples/rules/: encoded_powershell.yml  prompt_injection_keywords.yml  regsvr32_squiblydoo.yml
examples/rules/llm/: dan_persona.yml  no_restrictions.yml  role_play_persona.yml
scripts/: build_garak_corpus.py  fetch_datasets.sh
src/drbt/: __init__.py  backtest.py  cli.py  confidence.py  events.py  loaders.py  metrics.py  ranking.py  report.py  rules.py  sigma.py  trends.py
tests/: test_backtest.py  test_loaders.py  test_metrics.py  test_normalize.py  test_sigma.py
