[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-rule-backtester"
version = "0.2.0"
description = "Backtest detection rules (Sigma / ATR / KQL-style) against labelled logs and AI-attack traces, with per-rule precision/recall/FP metrics and ensemble confidence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wislest" }]
keywords = ["detection-engineering", "sigma", "siem", "ai-security", "prompt-injection", "backtesting"]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
drbt = "drbt.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
